--- a/Dinos/Dinos.vcxproj
+++ b/Dinos/Dinos.vcxproj
@@ -133,11 +133,16 @@
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Dino.cpp" />
+    <ClCompile Include="DinoCard.cpp" />
+    <ClCompile Include="DinoPopup.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="LuckyDinoButton.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainScreen.cpp" />
+    <ClCompile Include="PartyScreen.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Popup.cpp" />
+    <ClCompile Include="RestingScreen.cpp" />
     <ClCompile Include="ShopScreen.cpp" />
     <ClCompile Include="Utils.cpp" />
     <ClCompile Include="WelcomeScreen.cpp" />
@@ -147,11 +152,16 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="Const.h" />
     <ClInclude Include="Dino.h" />
+    <ClInclude Include="DinoCard.h" />
+    <ClInclude Include="DinoPopup.h" />
     <ClInclude Include="Fight.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="LuckyDinoButton.h" />
     <ClInclude Include="MainScreen.h" />
+    <ClInclude Include="PartyScreen.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Popup.h" />
+    <ClInclude Include="RestingScreen.h" />
     <ClInclude Include="ShopScreen.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Utils.h" />
