--- a/Dinos/Dinos.vcxproj.filters
+++ b/Dinos/Dinos.vcxproj.filters
@@ -13,9 +13,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Header Files\Structures">
-      <UniqueIdentifier>{9118e606-8df8-4498-88b9-fc2f97007ce1}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\Screens">
       <UniqueIdentifier>{4b0da2b4-4e5c-4a80-9d41-cf6e54e04a98}</UniqueIdentifier>
     </Filter>
@@ -25,11 +22,20 @@
     <Filter Include="Source Files\Models">
       <UniqueIdentifier>{d4e93d22-512a-4563-b74f-ba4bc8cbf23a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Structures">
-      <UniqueIdentifier>{93c2ecf4-7c2d-4632-8269-b74bf6f9b1c8}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Screens">
       <UniqueIdentifier>{9c6b0518-167d-4089-936d-911454196f4c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Buttons">
+      <UniqueIdentifier>{6c116f96-cbb4-42ce-86d8-4efa52462df6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Buttons">
+      <UniqueIdentifier>{dd91625d-896f-4396-a7dc-623bca0d9e5e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Popups">
+      <UniqueIdentifier>{9118e606-8df8-4498-88b9-fc2f97007ce1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Popups">
+      <UniqueIdentifier>{93c2ecf4-7c2d-4632-8269-b74bf6f9b1c8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -54,17 +60,32 @@
     <ClCompile Include="WelcomeScreen.cpp">
       <Filter>Source Files\Screens</Filter>
     </ClCompile>
-    <ClCompile Include="ScreenBase.cpp">
-      <Filter>Source Files\Structures</Filter>
-    </ClCompile>
-    <ClCompile Include="Button.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Popup.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Popups</Filter>
     </ClCompile>
     <ClCompile Include="ShopScreen.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Screens</Filter>
+    </ClCompile>
+    <ClCompile Include="Button.cpp">
+      <Filter>Source Files\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="ScreenBase.cpp">
+      <Filter>Source Files\Screens</Filter>
+    </ClCompile>
+    <ClCompile Include="DinoCard.cpp">
+      <Filter>Source Files\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="DinoPopup.cpp">
+      <Filter>Source Files\Popups</Filter>
+    </ClCompile>
+    <ClCompile Include="PartyScreen.cpp">
+      <Filter>Source Files\Screens</Filter>
+    </ClCompile>
+    <ClCompile Include="LuckyDinoButton.cpp">
+      <Filter>Source Files\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="RestingScreen.cpp">
+      <Filter>Source Files\Screens</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -83,14 +104,8 @@
     <ClInclude Include="Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Button.h">
-      <Filter>Header Files\Structures</Filter>
-    </ClInclude>
-    <ClInclude Include="ScreenBase.h">
-      <Filter>Header Files\Structures</Filter>
-    </ClInclude>
     <ClInclude Include="Popup.h">
-      <Filter>Header Files\Structures</Filter>
+      <Filter>Header Files\Popups</Filter>
     </ClInclude>
     <ClInclude Include="MainScreen.h">
       <Filter>Header Files\Screens</Filter>
@@ -105,6 +120,27 @@
       <Filter>Header Files\Models</Filter>
     </ClInclude>
     <ClInclude Include="ShopScreen.h">
+      <Filter>Header Files\Screens</Filter>
+    </ClInclude>
+    <ClInclude Include="Button.h">
+      <Filter>Header Files\Buttons</Filter>
+    </ClInclude>
+    <ClInclude Include="ScreenBase.h">
+      <Filter>Header Files\Screens</Filter>
+    </ClInclude>
+    <ClInclude Include="LuckyDinoButton.h">
+      <Filter>Header Files\Buttons</Filter>
+    </ClInclude>
+    <ClInclude Include="DinoCard.h">
+      <Filter>Header Files\Buttons</Filter>
+    </ClInclude>
+    <ClInclude Include="PartyScreen.h">
+      <Filter>Header Files\Screens</Filter>
+    </ClInclude>
+    <ClInclude Include="DinoPopup.h">
+      <Filter>Header Files\Popups</Filter>
+    </ClInclude>
+    <ClInclude Include="RestingScreen.h">
       <Filter>Header Files\Screens</Filter>
     </ClInclude>
   </ItemGroup>
