--- a/Dinos/Dinos.vcxproj
+++ b/Dinos/Dinos.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Dino.cpp" />
     <ClCompile Include="DinoCard.cpp" />
     <ClCompile Include="DinoPopup.cpp" />
+    <ClCompile Include="FightMainScreen.cpp" />
     <ClCompile Include="FightWelcomeScreen.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="LuckyDinoButton.cpp" />
@@ -156,6 +157,7 @@
     <ClInclude Include="DinoCard.h" />
     <ClInclude Include="DinoPopup.h" />
     <ClInclude Include="Fight.h" />
+    <ClInclude Include="FightMainScreen.h" />
     <ClInclude Include="FightWelcomeScreen.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="LuckyDinoButton.h" />
