--- a/Dinos/Dinos.vcxproj
+++ b/Dinos/Dinos.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Dino.cpp" />
     <ClCompile Include="DinoCard.cpp" />
     <ClCompile Include="DinoPopup.cpp" />
+    <ClCompile Include="FightFinalScreen.cpp" />
     <ClCompile Include="FightMainScreen.cpp" />
     <ClCompile Include="FightWelcomeScreen.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -145,6 +146,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Popup.cpp" />
     <ClCompile Include="RestingScreen.cpp" />
+    <ClCompile Include="ScreenEmptyBase.cpp" />
     <ClCompile Include="ShopScreen.cpp" />
     <ClCompile Include="Utils.cpp" />
     <ClCompile Include="WelcomeScreen.cpp" />
@@ -156,7 +158,7 @@
     <ClInclude Include="Dino.h" />
     <ClInclude Include="DinoCard.h" />
     <ClInclude Include="DinoPopup.h" />
-    <ClInclude Include="Fight.h" />
+    <ClInclude Include="FightFinalScreen.h" />
     <ClInclude Include="FightMainScreen.h" />
     <ClInclude Include="FightWelcomeScreen.h" />
     <ClInclude Include="Game.h" />
@@ -166,6 +168,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Popup.h" />
     <ClInclude Include="RestingScreen.h" />
+    <ClInclude Include="ScreenEmptyBase.h" />
     <ClInclude Include="ShopScreen.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Utils.h" />
